minor changes for code readability

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories(/opt/local/include)
 link_directories(/usr/local/lib)
 link_directories(/opt/local/lib)
 
-add_executable(bladeRF_rt 	${PROJECT_SOURCE_DIR}/src/main.c
+add_executable(tuntap_over_bladerf 	${PROJECT_SOURCE_DIR}/src/main.c
 	${PROJECT_SOURCE_DIR}/src/tun_tap.c
 	${PROJECT_SOURCE_DIR}/src/blade_rf.c
 	${PROJECT_SOURCE_DIR}/src/ofdmflexframe.c	
@@ -17,7 +17,7 @@ add_executable(bladeRF_rt 	${PROJECT_SOURCE_DIR}/src/main.c
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
 
-target_link_libraries(bladeRF_rt bladeRF m c liquid pthread) #fec tuntap
+target_link_libraries(tuntap_over_bladerf bladeRF m c liquid pthread) #fec tuntap
 
 
 
